--- a/lecturenotes/week1notes.html
+++ b/lecturenotes/week1notes.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <!--you can only have 1 h1 but lots of h2s and h3s-->
-        <h1>Out Second Webpage</h1>
+        <h1>Our Second Webpage</h1>
         <h2>This is a Subheading</h2>
         <h3>This is a sub Subheading</h3>
 
