--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -8,8 +8,16 @@
            Syracuse University<br>
            Syracuse, NY 13244<br>
        </p>
-       <p>My LinkedIn Profile <a>https://www.linkedin.com/in/lindsey-latorre/</a></p>
-       
+       <p>
+           <a href="malito:llatorre@syr.edu">Lindsey Email</a>
+       </p>
+       <p>
+        <a href="malito:https://www.linkedin.com/in/lindsey-latorre/">My LinkedIn Profile</a>
+        ../../images/linkedinlogo.svg<br>
+        </p>
+
+
+
 
    </body>
 </html>
