--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -13,7 +13,7 @@
        </p>
        <p>
         <a href="malito:https://www.linkedin.com/in/lindsey-latorre/">My LinkedIn Profile</a>
-        ../../images/linkedinlogo.svg<br>
+        <a href="malito:https://www.linkedin.com/in/lindsey-latorre/">/../images/linkedinlogo.svg</a><br>
         </p>
 
 
