--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Contact</title>
+    </head>
    <body>
-       <h1>Contact</h1>
        <p>
            Syracuse University<br>
            900 South Crouse Ave<br>
