--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -4,6 +4,7 @@
         <title>Contact</title>
     </head>
    <body>
+       <h1>Contact</h1>
        <p>
            Syracuse University<br>
            900 South Crouse Ave<br>
