--- a/lab08/index.html
+++ b/lab08/index.html
@@ -4,26 +4,39 @@
 <meta charset="utf-8">
 <title>lindseylatorre-bio</title>
 <link rel="stylesheet" href="styles.css">
+<style>
+    .image {float: right; margin: ;}
+</style>
 </head>
 <body>
     <nav><a href="index.html">Home</a> |
     <a href="skills.html">Skills</a> |
     <a href="contact.html">Contact</a></nav>
+    <p><img class="image" src="../images/profphotoshop.jpg" alt="linkedin logo"></p>
     <h1>Lindsey Latorre's Biography</h1>
+
+    <main>
+
     <p>My name is Lindsey Latorre. I am double-majoring in Real Estate and Finance, interested in expanding my knowledge on the world of residential and commercial real estate and their affiliation with the financial sector. </p>
 <h2>Personal Information</h2>
     <p>I am exceptionally skilled in customer service and sales. I am proficient in Spanish, CAD, and Solidworks. </p>
 <p>I enjoy being outdoors and on the water. I <strong>love</strong> boating, jet skiing, fishing, and four-wheeling. My favorite movie is The Hateful Eight. My favorite shows are the following:</p>
-<p><img src="../images/profphotoshop.jpg" alt="linkedin logo"></p>
 <ul>
     <li>Selling Sunset</li>
     <li>Jeopardy!</li>
     <li>Money Heist</li>
 </ul>
+
+</main>
+
+
+<footer>
 <hr>
-&copy;2020
+&copy;2020 
 <span class="clearfloat">
-"The more you know, the more you realize you don't know. - Artistotle"
+    <span>"The more you know, the more you realize you don't know. - Artistotle"</span>
 </span>
+</footer>
+
 </body>
 </html>
