--- a/lecturenotes/week8flexbox.html
+++ b/lecturenotes/week8flexbox.html
@@ -13,7 +13,7 @@
            .row1, .row2 {
                display: flex; /* display flex goes on the row container */
            }
-           /* vvv this is a descendant selector, it selects alll the divs inside the div that has a class of row2 */
+           /* vvv this is a descendant selector, it selects all the divs inside the div that has a class of row2 */
            .row2 div {
                 flex: 1; /* how much space is this column taking up */
                 padding: 20px; 
