--- a/lab10/contact.html
+++ b/lab10/contact.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
    <body>
-    <nav><a href="index.html">Home</a> |
-        <a href="skills.html">Skills</a> |
+    <nav><a href="index.html">Home</a> <span>|</span>
+        <a href="skills.html">Skills</a> <span>|</span>
         <a href="contact.html">Contact</a></nav>
        <h1>Contact</h1>
     <div class="row1">
