--- a/lab10/index.html
+++ b/lab10/index.html
@@ -7,8 +7,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <nav><a href="index.html">Home</a> |
-    <a href="skills.html">Skills</a> |
+    <nav><a href="index.html">Home</a> <span>|</span>
+    <a href="skills.html">Skills</a> <span>|</span>
     <a href="contact.html">Contact</a></nav>
     <p><img class="image" src="../images/profphotoshop.jpg" alt="linkedin logo"></p>
     <h1>Lindsey Latorre's Biography</h1>
