--- a/lab10/skills.html
+++ b/lab10/skills.html
@@ -35,10 +35,11 @@
                 margin: 10px;
             }
         </style>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <nav><a href="index.html">Home</a> |
-            <a href="skills.html">Skills</a> |
+        <nav><a href="index.html">Home</a> <span>|</span>
+            <a href="skills.html">Skills</a> <span>|</span>
             <a href="contact.html">Contact</a></nav>
 
             <h1 class="skillsheading">Various Skills</h1>
