--- a/lecturenotes/participation10.html
+++ b/lecturenotes/participation10.html
@@ -24,18 +24,10 @@
 <body>
     <h1>Lindsey Latorre</h1>
     <div class="row1">
-        <div class="box1">
-            <p>1</p>
-        </div>
-        <div class="box2">
-            <p>2</p>
-        </div>
-        <div class="box3">
-            <p>3</p>
-        </div>
-        <div class="box4">
-            <p>4</p>
-        </div>
+        <div class="box1"><p>1</p></div>
+        <div class="box2"><p>2</p></div>
+        <div class="box3"><p>3</p></div>
+        <div class="box4"><p>4</p></div>
     </div>
 </body>
 </html>
