--- a/lab11/skills.html
+++ b/lab11/skills.html
@@ -52,7 +52,7 @@
             <div>
                 <div class="flexbox2">
                     <div class="skillsrow">
-                        <div><img class="icon" src="../images/noun-sales-303640 (1).png"> <p>Sales</p></div>
+                        <div><img class="icon" src="../images/noun-sales-303640 (1).png" alt="sales icon"> <p>Sales</p></div>
                         <div><img class="icon" src="../images/noun-point-of-sale-2817131.png" alt="point of sale icon"><p>Point of Sale (POS) Systems</p></div>
                         <div><img class="icon" src="../images/noun-network-4719078.png" alt="networking icon"> <p>Networking</p></div>
                         <div><img class="icon" src="../images/noun-customer-service-1012186.png" alt="customer service icon"><p>Customer Service</p></div>
