--- a/lab11/skills.html
+++ b/lab11/skills.html
@@ -42,7 +42,8 @@
             <a href="#content" id="skip">Skip to Content</a>
             <a href="index.html">Home</a> <span>|</span>
             <a href="skills.html">Skills</a> <span>|</span>
-            <a href="contact.html">Contact</a></nav>
+            <a href="contact.html">Contact</a>
+        </nav>
 
             <h1 class="skillsheading">Various Skills</h1>
 
