--- a/lab11/skills.html
+++ b/lab11/skills.html
@@ -45,7 +45,7 @@
             <a href="contact.html">Contact</a>
         </nav>
 
-            <h1 class="skillsheading">Various Skills</h1>
+            <h1 class="skillsheading" id="content">Various Skills</h1>
 
             <p class="paragraph">During my educational and professional careers, I have developed a wide array of skills that will set me up for success in my future. Below, you can find a few of these skills and my competancy in each.</p><br>
 
