--- a/lab11/contact.html
+++ b/lab11/contact.html
@@ -11,7 +11,7 @@
         <a href="index.html">Home</a> <span>|</span>
         <a href="skills.html">Skills</a> <span>|</span>
         <a href="contact.html">Contact</a></nav>
-       <h1>Contact</h1>
+       <h1 id="content">Contact</h1>
     <div class="row1">
         
         <div class="row1col1">
