--- a/lab11/index.html
+++ b/lab11/index.html
@@ -17,7 +17,7 @@
 
     <main>
 
-    <p>My name is Lindsey Latorre. I am double-majoring in Real Estate and Finance, interested in expanding my knowledge on the world of residential and commercial real estate and their affiliation with the financial sector. </p>
+    <p id="content">My name is Lindsey Latorre. I am double-majoring in Real Estate and Finance, interested in expanding my knowledge on the world of residential and commercial real estate and their affiliation with the financial sector. </p>
 <h2>Personal Information</h2>
     <p>I am exceptionally skilled in customer service and sales. I am proficient in Spanish, CAD, and Solidworks. </p>
 <p>I enjoy being outdoors and on the water. I <strong>love</strong> boating, jet skiing, fishing, and four-wheeling. My favorite movie is The Hateful Eight. My favorite shows are the following:</p>
