--- a/lab11/contact.html
+++ b/lab11/contact.html
@@ -44,7 +44,7 @@
     <div class="row2">
         <div class="row2col1">
             <article class="article3">
-            <form action="https://formspree.io/f/xdobgzqy" method="post" label="information">
+            <form action="https://formspree.io/f/xdobgzqy" method="post">
                 <label for="homecollege">Home College</label><br>
                 <input type="text" id="homecollege" name="homecollege"><br>
                 <select id="grade" name="grade">
@@ -54,7 +54,7 @@
                     <option value="senior">senior</option>
                     <option value="other">other</option>
                 </select><br>
-                <textarea name="message">Go Orange!</textarea><br>
+                <textarea name="message" label for="information">Go Orange!</textarea><br>
                 <input type="submit" value="submit">
             </form>
         </article>
