THIS BETTER WORK.

--- a/lab11/contact.html
+++ b/lab11/contact.html
@@ -54,7 +54,8 @@
                     <option value="senior">senior</option>
                     <option value="other">other</option>
                 </select><br>
-                <textarea name="message"><label for="information">Go Orange!</label></textarea><br>
+                <label for="information">
+                <textarea name="message">Go Orange!</textarea></label><br>
                 <input type="submit" value="submit">
             </form>
         </article>
