--- a/lab11/contact.html
+++ b/lab11/contact.html
@@ -54,7 +54,7 @@
                     <option value="senior">senior</option>
                     <option value="other">other</option>
                 </select><br>
-                <label for="information">
+                <label for="message">
                 <textarea name="message">Go Orange!</textarea></label><br>
                 <input type="submit" value="submit">
             </form>
