--- a/lab11/contact.html
+++ b/lab11/contact.html
@@ -54,8 +54,8 @@
                     <option value="senior">senior</option>
                     <option value="other">other</option>
                 </select><br>
-                <label for="message">
-                <textarea name="message">Go Orange!</textarea></label><br>
+                <label for="message">'Cuse Pride</label><br>
+                <textarea name="message">Go Orange!</textarea><br>
                 <input type="submit" value="submit">
             </form>
         </article>
