--- a/lab11/contact.html
+++ b/lab11/contact.html
@@ -55,7 +55,7 @@
                     <option value="other">other</option>
                 </select><br>
                 <label for="message">'Cuse Pride</label><br>
-                <textarea name="message">Go Orange!</textarea><br>
+                <textarea name="message" id="message">Go Orange!</textarea><br>
                 <input type="submit" value="submit">
             </form>
         </article>
