--- a/project6/sitehome.html
+++ b/project6/sitehome.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="sitestyles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     
@@ -23,20 +24,21 @@
         <a href="checkout.html" class="estimatebutton"><strong>Get an estimate!</strong></a>
 
         <footer>
-            <div>
-                <article class="leftbox">
+            <div class="boxes">
+                <div class="leftbox">
                     <h4>Contact Us</h4>
                         Rich Fiandach<br>
                         Cell: (585)388-1100<br>
                         <a href="malito:richweld1@yahoo.com">Email: richweld1@yahoo.com</a>
-                </article>
-                <article class="bottomlogo">
+                </div>
+                <div class="bottomlogo">
                     <img src="../project/images/beaverlogosized.png" alt="log">
-                <article class="rightbox">
+                </div>
+                <div class="rightbox">
                     <h4>Connect With Us</h4>
-                        <img src="../project/images/noun-instagram-3350460.png" alt="instagram" class="icon">
+                        <a href="https://www.instagram.com/angrybeaverlumber/"><img src="../project/images/noun-instagram-3350460.png" alt="instagram" class="icon"></a>
                         <img src="../project/images/noun-facebook-1515903.png" alt="facebook" class="icon">
-                </article>
+                </div>
             </div>
         </footer>
 
