--- a/project/sitehome.html
+++ b/project/sitehome.html
@@ -13,7 +13,7 @@
     
     <nav><a href="sitehome.html"><strong>Home</strong></a> <span>|</span>
         <a href="about.html"><strong>About</strong></a> <span>|</span>
-        <a href="estimate.html"><strong>Estimate Generator</strong></a></nav>
+        <a href="estimategenerator.html"><strong>Estimate Generator</strong></a></nav>
 
 
         <h1>Angry Beaver</h1>
@@ -22,7 +22,7 @@
 
         <p class="homestatement"><strong>Get your wood hauled away by Angry Beaver! Founded in 2021, we are young company dedicated to meeting your log removal needs.</strong></p>
 
-        <a href="checkout.html" class="estimatebutton"><strong>Get an estimate!</strong></a>
+        <a href="estimategenerator.html" class="estimatebutton"><strong>Get an estimate!</strong></a>
 
         <footer>
             <div class="boxes">
