--- a/project/sitehome.html
+++ b/project/sitehome.html
@@ -13,7 +13,7 @@
     
     <nav><a href="sitehome.html"><strong>Home</strong></a> <span>|</span>
         <a href="about.html"><strong>About</strong></a> <span>|</span>
-        <a href="estimategenerator.html"><strong>Estimate Generator</strong></a></nav>
+        <a href="estimategenerator.html"><strong>Estimate</strong></a></nav>
 
 
         <h1>Angry Beaver</h1>
