--- a/project/about.html
+++ b/project/about.html
@@ -7,7 +7,7 @@
     <title>About</title>
     <link rel="stylesheet" href="sitestyles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png"
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 </head>
 <body>
     
