--- a/project/estimategenerator.html
+++ b/project/estimategenerator.html
@@ -35,11 +35,11 @@
         </div>
         <div class="step">
         <label for="location">Location of Pickup</label><br>
-        <input type="location" id="location" name="location"><br>
+        <input type="text" id="location" name="location"><br>
         </div>
         <div class="step">
         <label for="species">Species of Trees (if known)</label><br>
-        <input type="species" id="species" name="species"><br>
+        <input type="text" id="species" name="species"><br>
         </div>
         <div class="step">
         <p>Preffered contact method?</p>
