--- a/project/estimategenerator.html
+++ b/project/estimategenerator.html
@@ -30,16 +30,20 @@
         <input type="text" id="companyname" name="companyname"><br>
         </div>
         <div class="step">
-        <label for="number">Phone Number</label><br>
-        <input type="tel" id="number" name="number"><br>
-        </div>
-        <div class="step">
         <label for="location">Location of Pickup</label><br>
         <input type="text" id="location" name="location"><br>
         </div>
         <div class="step">
         <label for="species">Species of Trees (if known)</label><br>
         <input type="text" id="species" name="species"><br>
+        </div>
+        <div class="step">
+            <label for="number">Phone Number</label><br>
+            <input type="tel" id="number" name="number"><br>
+        </div>
+        <div class="step">
+            <label for="emailaddress">Email</label><br>
+            <input type="text" id="emailaddress" name="emailaddress"><br>
         </div>
         <div class="step">
         <p>Preffered contact method?</p>
